# gtk-notification

./: .gitignore  Makefile.am  README  configure.ac
src/: Makefile.am  gtk-notification.c  gtk-notification.h  gtk_notification_demo.ui  main.c
